--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -1,11 +1,12 @@
-.main {
-  margin: 0%;
-  padding: 0%;
+.body {
+  top: 0%;
+  margin: 0;
+  padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
   background: black;
 }
 .new_main {
+  position: absolute;
   font-size: 45px;
   line-height: 1.2 !important;
   text-transform: uppercase;
